// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tag On Post|SuggestionContainer default 1`] = `
<div
  className="suggestion-container"
>
  <div
    className="title"
  >
    Suggested keywords:
  </div>
  <div
    className="suggestion-list"
  >
    <span>
      Investissement
    </span>
    <span>
      Mesures
    </span>
    <span>
      Inclusive
    </span>
    <span>
      Application
    </span>
    <span>
      Faisabilité
    </span>
  </div>
</div>
`;

exports[`Storyshots Tag On Post|SuggestionContainer playground 1`] = `
<div
  className="suggestion-container"
>
  <div
    className="title"
  >
    This is a custom title
  </div>
  <div
    className="suggestion-list"
  >
    <span>
      Investissement
    </span>
    <span>
      Mesures
    </span>
    <span>
      Inclusive
    </span>
    <span>
      Application
    </span>
    <span>
      Faisabilité
    </span>
  </div>
</div>
`;
